minor fix => project sidebar on mobile height && default project

--- a/src/style/pages/Projects.scss
+++ b/src/style/pages/Projects.scss
@@ -7,7 +7,7 @@
   min-height: 100vh;
   overflow: hidden;
 
-  >header {
+  >.header {
     display: flex;
     align-items: center;
     padding: 0.75rem;
@@ -47,6 +47,7 @@
   gap: 1rem;
   background-color: lighten($bg-primary, 6%);
   overflow: hidden;
+  height: 100%;
 
   >ul {
     height: 100%;
@@ -141,7 +142,7 @@
 
 @media (max-width: 700px) {
   .projects {
-    >header {
+    >.header {
       flex-direction: row-reverse;
       z-index: 100;
 
@@ -165,9 +166,10 @@
   }
 
   .project-table {
-    grid-template-columns: 1fr;
+    display: flex;
 
     >ul {
+      height: 100vh;
       position: absolute;
       left: -100%;
       transition: 150ms;
@@ -203,7 +205,7 @@
 
 @media (min-width: 700px) {
   .projects {
-    >header {
+    >.header {
       >img {
         display: none;
       }
